--- a/Jellyfin.Plugin.ThemeSongs/Configuration/configurationpage.html
+++ b/Jellyfin.Plugin.ThemeSongs/Configuration/configurationpage.html
@@ -44,6 +44,20 @@
                         </div>
                     </div>
                     <div class="inputContainer">
+                        <label class="inputLabel">Fade In Duration (seconds)</label>
+                        <input type="number" is="emby-input" id="fadeInDuration" min="0" max="10" step="1" />
+                        <div class="fieldDescription">
+                            Duration of the fade-in effect at the beginning
+                        </div>
+                    </div>
+                    <div class="inputContainer">
+                        <label class="inputLabel">Fade Out Duration (seconds)</label>
+                        <input type="number" is="emby-input" id="fadeOutDuration" min="0" max="10" step="1" />
+                        <div class="fieldDescription">
+                            Duration of the fade-out effect at the end
+                        </div>
+                    </div>
+                    <div class="inputContainer">
                         <label class="inputLabel">FFmpeg Path</label>
                         <input type="text" is="emby-input" id="ffmpegPath" />
                         <div class="fieldDescription">
@@ -205,8 +219,16 @@
                             console.log('Set normalizeAudio:', config.NormalizeAudio);
                         }
                         if (normalizeAudioVolumeEl) {
-                            normalizeAudioVolumeEl.value = config.NormalizeAudioVolume || -15;
+                            normalizeAudioVolumeEl.value = config.NormalizeAudioVolume || -18;
                             console.log('Set normalizeAudioVolume:', config.NormalizeAudioVolume);
+                        }
+                        var fadeInDurationEl = document.getElementById("fadeInDuration");
+                        if (fadeInDurationEl) {
+                            fadeInDurationEl.value = config.FadeInDuration || 3;
+                        }
+                        var fadeOutDurationEl = document.getElementById("fadeOutDuration");
+                        if (fadeOutDurationEl) {
+                            fadeOutDurationEl.value = config.FadeOutDuration || 3;
                         }
                         if (ffmpegPathEl) {
                             ffmpegPathEl.value = config.FfmpegPath || "ffmpeg";
@@ -249,6 +271,8 @@
                     // Get audio settings
                     var normalizeAudio = document.getElementById("normalizeAudio").checked;
                     var normalizeAudioVolume = document.getElementById("normalizeAudioVolume").value;
+                    var fadeInDuration = document.getElementById("fadeInDuration").value;
+                    var fadeOutDuration = document.getElementById("fadeOutDuration").value;
                     var ffmpegPath = document.getElementById("ffmpegPath").value;
 
                     // Get provider settings
@@ -261,6 +285,8 @@
                         // Update audio settings
                         config.NormalizeAudio = normalizeAudio;
                         config.NormalizeAudioVolume = normalizeAudioVolume;
+                        config.FadeInDuration = fadeInDuration;
+                        config.FadeOutDuration = fadeOutDuration;
                         config.FfmpegPath = ffmpegPath;
 
                         // Update provider settings
